--- a/ajuda.html
+++ b/ajuda.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="imagem/mini-logo.ico" type="image/x-icon">
     <title>Ajuda</title>
 </head>
-<body>oaisbcuiasbcba
+<body>
   <header>
     <div class="logo">
         <a href="refugepi.html"> <img src="imagem/logo1.png" alt="Logo"> </a>
