--- a/ajuda.html
+++ b/ajuda.html
@@ -14,7 +14,7 @@
     </div>
     <nav>
         <ul>
-            <li><a href="socializacao.html"><i class="fas fa-users"></i> Sociali</a></li>
+            <li><a href="socializacao.html"><i class="fas fa-users"></i> Socialização</a></li>
             <li><a href="vagasdeemprego.html"><i class="fas fa-briefcase"></i> Introdução ao Trabalho</a></li>
             <li><a href="marketplace.html"><i class="fas fa-shopping-basket"></i> Marketplace</a></li>
         </ul>
