--- a/marketplace.html
+++ b/marketplace.html
@@ -29,6 +29,42 @@
         </div>
     </section>
 
+  <div class="container-search">
+      <div class="search-box">
+          <input type="text" placeholder="Digite sua pesquisa">
+          <button type="submit">Pesquisar</button>
+      </div>
+  </div>
+
+  <div class="category-box">
+    <h2>Categorias</h2>
+    <br/>
+    <ul>
+        <li><a href="#">Móveis</a></li>
+        <br/>
+        <li><a href="#">Móveis</a></li>
+        <br/>
+        <li><a href="#">Móveis</a></li>
+        <br/>
+        <li><a href="#">Móveis</a></li>
+        <br/>
+        <li><a href="#">Móveis</a></li>
+        <br/>
+        <li><a href="#">Móveis</a></li>
+        <br/>
+        <li><a href="#">Móveis</a></li>
+        <br/>
+        <li><a href="#">Móveis</a></li>
+        <br/>
+        <li><a href="#">Móveis</a></li>
+        <br/>
+        <li><a href="#">Móveis</a></li>
+        <br/>
+        <li><a href="#">Móveis</a></li>
+    </ul>
+    <br/>
+</div>
+
     <footer>
       <div class="footer-links">
           <a href="ajuda.html"><i class="fas fa-question-circle"></i> Ajuda</a>
@@ -37,12 +73,10 @@
       <p>&copy; 2023 R.E.F.U.G.E Todos os direitos reservados.</p>
   </footer>
 
-  <script src="https://kit.fontawesome.com/a076d05399.js"></script> <!-- Adiciona o FontAwesome para os ícones -->
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <script>
       document.onreadystatechange = function () {
           if (document.readyState === "complete") {
-              // Esconde a tela de carregamento quando a página estiver totalmente carregada
-              // Aguarda 1 segundo (1000 milissegundos) antes de esconder a tela de carregamento
               setTimeout(function() {
                   document.getElementById("loader").style.display = "none";
               }, 1500);
