--- a/marketplace.html
+++ b/marketplace.html
@@ -65,6 +65,8 @@
     <br/>
 </div>
 
+</div>
+
     <footer>
       <div class="footer-links">
           <a href="ajuda.html"><i class="fas fa-question-circle"></i> Ajuda</a>
