--- a/teste.html
+++ b/teste.html
@@ -14,7 +14,7 @@
 <div class="container">
 <div class="row justify-content-center">
 <div class="col-md-6 text-center mb-5">
-<h2 class="heading-section"><img src="../../Downloads/Refuge-main/imagem/logo1.png" alt=""></h2>
+<h2 class="heading-section"><img src="imagem/logo1.png" alt=""></h2>
 </div>
 </div>
 <div class="row justify-content-center">
@@ -40,24 +40,25 @@
 </label>
 </div>
 <div class="w-50 text-md-right">
-<a href="#" style="color: #fff">Esqueceu a senha?</a>
+<a href="recuperaçãodesenha.html" style="color: #fff">Esqueceu a senha?</a>
 </div>
 </div>
 </form>
-<p class="w-100 text-center">&mdash; Entre com &mdash;</p>
+<p class="w-100 text-center">&mdash; ou &mdash;</p>
 <div class="social d-flex text-center">
-<a href="#" class="px-2 py-2 mr-md-1 rounded"><span class="ion-logo-facebook mr-2"></span> Facebook</a>
-<a href="#" class="px-2 py-2 ml-md-1 rounded"><span class="ion-logo-twitter mr-2"></span> Twitter</a>
+    <script>document.getElementById('voltarAba').addEventListener('click', function() {
+  window.history.back();
+});
+</script>
+
+<a href="cadastre-se.html" class="px-2 py-2 ml-md-1 rounded"><span class="ion-logo-twitter mr-2"></span> Cadastre-se</a>
 </div>
 </div>
 </div>
 </div>
 </div>
 </section>
-<script src="js/jquery.min.js"></script>
-<script src="js/popper.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
-<script defer src="https://static.cloudflareinsights.com/beacon.min.js/v8b253dfea2ab4077af8c6f58422dfbfd1689876627854" integrity="sha512-bjgnUKX4azu3dLTVtie9u6TKqgx29RBwfj3QXYt5EKfWM/9hPSAI/4qcV5NACjwAo8UtTeWefx6Zq5PHcMm7Tg==" data-cf-beacon='{"rayId":"810d8e013b5c0309","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2023.8.0","si":100}' crossorigin="anonymous"></script>
+
 </body>
+
 </html>
