--- a/cadastre-se.html
+++ b/cadastre-se.html
@@ -1,32 +1,70 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="cadastre-se.css">
-    <link rel="shortcut icon" href="imagem/mini-logo.ico" type="image/x-icon">
-    <title>Cadastre-se</title>
-</head>
-<body>
-    
-    <h1>Cadastre-se aqui</h1>
+<title>Login 10</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="teste.css">
+<script nonce="7b2a73ed-a87a-4e2e-be46-d159d5e6154a">(function(w,d){!function(a,b,c,d){a[c]=a[c]||{};a[c].executed=[];a.zaraz={deferred:[],listeners:[]};a.zaraz.q=[];a.zaraz._f=function(e){return async function(){var f=Array.prototype.slice.call(arguments);a.zaraz.q.push({m:e,a:f})}};for(const g of["track","set","debug"])a.zaraz[g]=a.zaraz._f(g);a.zaraz.init=()=>{var h=b.getElementsByTagName(d)[0],i=b.createElement(d),j=b.getElementsByTagName("title")[0];j&&(a[c].t=b.getElementsByTagName("title")[0].text);a[c].x=Math.random();a[c].w=a.screen.width;a[c].h=a.screen.height;a[c].j=a.innerHeight;a[c].e=a.innerWidth;a[c].l=a.location.href;a[c].r=b.referrer;a[c].k=a.screen.colorDepth;a[c].n=b.characterSet;a[c].o=(new Date).getTimezoneOffset();if(a.dataLayer)for(const n of Object.entries(Object.entries(dataLayer).reduce(((o,p)=>({...o[1],...p[1]})),{})))zaraz.set(n[0],n[1],{scope:"page"});a[c].q=[];for(;a.zaraz.q.length;){const q=a.zaraz.q.shift();a[c].q.push(q)}i.defer=!0;for(const r of[localStorage,sessionStorage])Object.keys(r||{}).filter((t=>t.startsWith("_zaraz_"))).forEach((s=>{try{a[c]["z_"+s.slice(7)]=JSON.parse(r.getItem(s))}catch{a[c]["z_"+s.slice(7)]=r.getItem(s)}}));i.referrerPolicy="origin";i.src="/cdn-cgi/zaraz/s.js?z="+btoa(encodeURIComponent(JSON.stringify(a[c])));h.parentNode.insertBefore(i,h)};["complete","interactive"].includes(b.readyState)?zaraz.init():a.addEventListener("DOMContentLoaded",zaraz.init)}(w,d,"zarazData","script");})(window,document);</script></head>
+<body class="img js-fullheight" style="background-image: url(images/bg.jpg);">
+<section class="ftco-section">
+<div class="container">
+<div class="row justify-content-center">
+<div class="col-md-6 text-center mb-5">
 
-    <div class="box-do-cadastro">
-        <form>
+</div>
+</div>
+<a href="teste.html" id="voltarAba" class="seta">&#8592;</a>
+  
+  <script src="script.js"></script>
+<div class="row justify-content-center">
+<div class="col-md-6 col-lg-4">
+<div class="login-wrap p-0">
+    <h3 class="mb-4 text-center">Crie sua conta</h3>
+    <br/>
+    <br/>
+    <br/>
+<form action="#" class="signin-form">
+<div class="form-group">
+<input type="text" class="form-control" placeholder="E-mail" required>
+</div><div class="form-group">
+<input type="text" class="form-control" placeholder="Usuário" required>
+</div>
+<div class="form-group">
+<input id="password-field" type="password" class="form-control" placeholder="Senha" required>
+<span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
+</div>
+<div class="form-group">
+<input id="password-field" type="password" class="form-control" placeholder="Confirme sua senha" required>
+<span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
+</div>
+<div class="form-group">
+<button type="submit" class="form-control btn btn-primary submit px-3">Crie sua conta</button>
+</div>
+<div class="form-group d-md-flex">
+<div class="w-50">
 
-            <input type="number" placeholder="Telefone" pattern="[0-9]" maxlength="9"/>
-            </br>
-            <input type="email" placeholder="Email" required/>
-            </br>
-            <input type="password" placeholder="Senha" required/>
-            </br>
-            </br>
-          
-         <button type="submit">Cadastre-se</button>
-        </br>
-         <a href="index.html"><button class="botao-volte-ao-login" type="button">Volte ao Login</button></a>
-        </form>
-    </div>
+
+</label>
+</div>
+<div class="w-50 text-md-right">
+
+</div>
+</div>
+</form>
+
+
+
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
 
 </body>
+
 </html>
