--- a/sobre.html
+++ b/sobre.html
@@ -94,6 +94,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <footer>
+        <div class="footer-links">
+            <a href="ajuda.html"><i class="fas fa-question-circle"></i> Ajuda</a>
+            <a href="sobre.html"><i class="fas fa-info-circle"></i> Sobre</a>
+        </div>
         <p>&copy; 2023 R.E.F.U.G.E Todos os direitos reservados.</p>
     </footer>
 
