--- a/adicionar.html
+++ b/adicionar.html
@@ -1,47 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="imagem/mini-logo.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="adicionar.css">
-    <title>Marketplace</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="adicionar.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+        <link rel="shortcut icon" href="imagem/mini-logo.ico" type="image/x-icon">
+        <title>Marketplace</title>
+    </head>
 <body>
     
-    <div class="contatos">
-        <div class="contatos1">
-            <div class="cont">
-                <p>(41) 4002-8922</p>
-            </div>
-            <div class="cont">
-                <p>refuge.adm@gmail.com</p>
-            </div>
-            <div class="cont">
-                <p>Rua Dos Pombos, 00-Curitiba</p>
-            </div>
+    <header>
+        <div class="logo">
+            <a href="refugepi.html"> <img src="imagem/logo1.png" alt="Logo"> </a>
         </div>
-    </div>
+        <nav>
+            <ul>
+                <li><a href="socializacao.html"><i class="fas fa-users"></i> Socialização</a></li>
+                <li><a href="vagasdeemprego.html"><i class="fas fa-briefcase"></i> Introdução ao Trabalho</a></li>
+                <li><a href="marketplace.html"><i class="fas fa-shopping-basket"></i> Marketplace</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <div class="vermelho">
-        <a href="refugepi.html">
-            <div class="amarelo"><img src="imagem/logo1.png" alt=""></div>
-        </a>
-
-        <div class="azul">
-            <div class="verde">
-                <a href="socializacao.html"><p>Socialização</p></a>
-            </div>
-            <div class="verde">
-                <a href="vagasdeemprego.html"><p>Introdução ao Trabalho</p></a>
-            </div>
-            <div class="verde">
-                <a href="marketplace.html"><p>Marketplace</p></a>
-            </div>
+    <section id="loader">
+        <div class="loader-content">
+          <img src="imagem/mundo carregamento.png" alt="Carregando...">
         </div>
-    </div>
+    </section>
+
 
     <h1>Adicionar Produto</h1>
   <form>
@@ -49,10 +37,31 @@
     <input type="text" id="nome" name="nome" required>
 
     <label for="preco">Preço:</label>
-    <input type="text" id="preco" name="preco" required>
+    <input type="text" id="valorInput" oninput="addCifrao(this)" name="preco" required>
 
-    <label for="descricao">Descrição:</label>
-    <textarea id="descricao" name="descricao" required></textarea>
+    <script>
+    function addCifrao(input) {
+        let valor = input.value.replace(/[^\d,]/g, '');
+
+        valor = valor.replace(/,+/g, ',')
+
+        valor = "R$ " + valor;
+
+        input.value = valor;
+    }
+    </script>
+
+    <label for="caixaTexto">Descrição:</label>
+    <div id="caixaTexto" contenteditable="true"></div>
+
+    <script>
+        const caixaTexto = document.getElementById("caixadeTexto");
+
+        caixaTexto.addEventListener("input", function() {
+            this.style.height = "auto";
+            this.style.height = (this.scrollHeight) + "px";
+        });
+    </script>
 
     <label for="foto">Foto:</label>
     <input type="file" id="foto" name="foto" accept=".jpg, .jpeg, .png" required>
@@ -60,13 +69,25 @@
     <input type="submit" value="Adicionar Produto">
   </form>
 
-    <div class="batata">
-        <div class="batatinha">
-            <a href="ajuda.html"><p>Ajuda</p></a>
-        </div>
-        <div class="batatinha">
-            <a href="sobre.html"><p>Sobre</p></a>
-        </div>
+  <footer>
+    <div class="footer-links">
+        <a href="ajuda.html"><i class="fas fa-question-circle"></i> Ajuda</a>
+        <a href="sobre.html"><i class="fas fa-info-circle"></i> Sobre</a>
     </div>
+    <p>&copy; 2023 R.E.F.U.G.E Todos os direitos reservados.</p>
+</footer>
+
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+<script>
+    document.onreadystatechange = function () {
+        if (document.readyState === "complete") {
+            setTimeout(function() {
+                document.getElementById("loader").style.display = "none";
+            }, 1500);
+        }
+    };
+</script>
+
+
 </body>
 </html>
