--- a/marketplace.html
+++ b/marketplace.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="marketplace.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="shortcut icon" href="imagem/mini-logo.ico" type="image/x-icon">
-    <title>R.E.F.U.G.E</title>
+    <title>Marketplace</title>
 </head>
 <body> 
     <header>
@@ -28,6 +28,13 @@
           <img src="imagem/mundo carregamento.png" alt="Carregando...">
         </div>
     </section>
+
+    <div class="adicionar">
+        <a href="adicionar.html">
+        <button type="submit">+</button>
+        </a>
+    </div>
+
 
   <div class="container-search">
       <div class="search-box">
