--- a/marketplace.html
+++ b/marketplace.html
@@ -72,6 +72,49 @@
     <br/>
 </div>
 
+   <div class="product-box1">
+    <img src="caminho-para-a-imagem-do-produto.jpg" alt="Nome do Produto">
+    <h3>Cachorro</h3>
+    <p class="product-price">R$ 99,99</p>
+    <p>Descrição do produto aqui. Esta é uma breve descrição do produto que você pode fornecer aos visitantes do seu site.</p>
+   </div>
+
+   <div class="product-box2">
+    <img src="caminho-para-a-imagem-do-produto.jpg" alt="Nome do Produto">
+    <h3>Cachorro</h3>
+    <p class="product-price">R$ 99,99</p>
+    <p>Descrição do produto aqui. Esta é uma breve descrição do produto que você pode fornecer aos visitantes do seu site.</p>
+   </div>
+
+   <div class="product-box3">
+    <img src="caminho-para-a-imagem-do-produto.jpg" alt="Nome do Produto">
+    <h3>Cachorro</h3>
+    <p class="product-price">R$ 99,99</p>
+    <p>Descrição do produto aqui. Esta é uma breve descrição do produto que você pode fornecer aos visitantes do seu site.</p>
+   </div>
+
+   <div class="product-box4">
+    <img src="caminho-para-a-imagem-do-produto.jpg" alt="Nome do Produto">
+    <h3>Cachorro</h3>
+    <p class="product-price">R$ 99,99</p>
+    <p>Descrição do produto aqui. Esta é uma breve descrição do produto que você pode fornecer aos visitantes do seu site.</p>
+   </div>
+
+   <div class="product-box5">
+    <img src="caminho-para-a-imagem-do-produto.jpg" alt="Nome do Produto">
+    <h3>Cachorro</h3>
+    <p class="product-price">R$ 99,99</p>
+    <p>Descrição do produto aqui. Esta é uma breve descrição do produto que você pode fornecer aos visitantes do seu site.</p>
+   </div>
+
+   <div class="product-box6">
+    <img src="caminho-para-a-imagem-do-produto.jpg" alt="Nome do Produto">
+    <h3>Cachorro</h3>
+    <p class="product-price">R$ 99,99</p>
+    <p>Descrição do produto aqui. Esta é uma breve descrição do produto que você pode fornecer aos visitantes do seu site.</p>
+   </div>
+  
+
 </div>
 
     <footer>
