--- a/marketplace.html
+++ b/marketplace.html
@@ -74,46 +74,62 @@
 
    <div class="product-box1">
     <img src="caminho-para-a-imagem-do-produto.jpg" alt="Nome do Produto">
-    <h3>Cachorro</h3>
+    <h3>Produto</h3>
     <p class="product-price">R$ 99,99</p>
     <p>Descrição do produto aqui. Esta é uma breve descrição do produto que você pode fornecer aos visitantes do seu site.</p>
    </div>
 
    <div class="product-box2">
-    <img src="caminho-para-a-imagem-do-produto.jpg" alt="Nome do Produto">
-    <h3>Cachorro</h3>
+    <a href="produto.html"><img src="caminho-para-a-imagem-do-produto.jpg" alt="Nome do Produto"></a>
+    <h3>Produto</h3>
     <p class="product-price">R$ 99,99</p>
     <p>Descrição do produto aqui. Esta é uma breve descrição do produto que você pode fornecer aos visitantes do seu site.</p>
    </div>
 
    <div class="product-box3">
     <img src="caminho-para-a-imagem-do-produto.jpg" alt="Nome do Produto">
-    <h3>Cachorro</h3>
+    <h3>Produto</h3>
     <p class="product-price">R$ 99,99</p>
     <p>Descrição do produto aqui. Esta é uma breve descrição do produto que você pode fornecer aos visitantes do seu site.</p>
    </div>
 
    <div class="product-box4">
     <img src="caminho-para-a-imagem-do-produto.jpg" alt="Nome do Produto">
-    <h3>Cachorro</h3>
+    <h3>Produto</h3>
     <p class="product-price">R$ 99,99</p>
     <p>Descrição do produto aqui. Esta é uma breve descrição do produto que você pode fornecer aos visitantes do seu site.</p>
    </div>
 
    <div class="product-box5">
     <img src="caminho-para-a-imagem-do-produto.jpg" alt="Nome do Produto">
-    <h3>Cachorro</h3>
+    <h3>Produto</h3>
     <p class="product-price">R$ 99,99</p>
     <p>Descrição do produto aqui. Esta é uma breve descrição do produto que você pode fornecer aos visitantes do seu site.</p>
    </div>
 
    <div class="product-box6">
     <img src="caminho-para-a-imagem-do-produto.jpg" alt="Nome do Produto">
-    <h3>Cachorro</h3>
+    <h3>Produto</h3>
     <p class="product-price">R$ 99,99</p>
     <p>Descrição do produto aqui. Esta é uma breve descrição do produto que você pode fornecer aos visitantes do seu site.</p>
    </div>
-  
+
+   <div class="product-box7">
+    <img src="caminho-para-a-imagem-do-produto.jpg" alt="Nome do Produto">
+    <h3>Produto</h3>
+    <p class="product-price">R$ 99,99</p>
+    <p>Descrição do produto aqui. Esta é uma breve descrição do produto que você pode fornecer aos visitantes do seu site.</p>
+   </div>
+
+   <div class="product-box8">
+    <img src="caminho-para-a-imagem-do-produto.jpg" alt="Nome do Produto">
+    <h3>Produto</h3>
+    <p class="product-price">R$ 99,99</p>
+    <p>Descrição do produto aqui. Esta é uma breve descrição do produto que você pode fornecer aos visitantes do seu site.</p>
+   </div>
+
+   <button class="my-button">Mostrar mais</button>
+
 
 </div>
 
