--- a/marketplace.html
+++ b/marketplace.html
@@ -12,7 +12,7 @@
 <body> 
     <header>
         <div class="logo">
-            <a href="refugepi.html"> <img src="imagem/logo1.png" alt="Logo"> </a>
+            <a href="refugepi.php"> <img src="imagem/logo1.png" alt="Logo"> </a>
         </div>
         <nav>
             <ul>
