--- a/sobre.html
+++ b/sobre.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="logo">
-        <a href="refugepi.html"><img src="imagem/logo1.png" alt="Logo"></a>
+        <a href="refugepi.php"><img src="imagem/logo1.png" alt="Logo"></a>
     </div>
     <nav>
         <a href="socializacao.html"><i class="fas fa-users"></i> Socialização</a>
