--- a/socializacao.html
+++ b/socializacao.html
@@ -25,7 +25,7 @@
 
     <section id="loader">
         <div class="loader-content">
-          <img src="imagem/mundo carregamento.png" alt="Carregando...">
+          <img src="imagem/mundo socialização.png" alt="Carregando...">
         </div>
     </section>
 
@@ -117,7 +117,7 @@
           if (document.readyState === "complete") {
               setTimeout(function() {
                   document.getElementById("loader").style.display = "none";
-              }, 1500);
+              }, 1250);
           }
       };
   </script>
