--- a/marketplace.html
+++ b/marketplace.html
@@ -24,11 +24,14 @@
             </ul>
         </nav>
 
+        // barra de pesquisa, acho que ela fica boa no meio assim, so falta arrumar a largura e o desgin, mas acho que fica boa no meio assim do header
+
         <div class="search-bar">
             <input type="text" placeholder="Pesquisar produtos...">
             <button type="submit"><i class="fas fa-search"></i></button>
           </div>
           
+        // pensei em linkar essa parte com a socializaçao, tipo pro usuario conversar diretamente com o vendedor   
 
           <div class="chat">
             <a href="socializacao.html">
@@ -36,6 +39,7 @@
             </a>
         </div>
 
+        // essa parte ia ser tipo um carrinho, mas o nome ia ser favoritos, tipo ao inves da pessoa adicionar o produto no carrinho ia colocar nos favoritos msm
 
         <div class="favoritos">
             <a href="carrinho.php">
@@ -43,7 +47,8 @@
             </a>
         </div>
 
-          
+        // ao inves de adicionar, mudei o nome para anunciar, que fica mais legalzinho eu acho
+
         <div class="adicionar">
             <a href="adicionar.html">
             <button type="submit">Anunciar</button>
@@ -52,6 +57,10 @@
 
     </header>
 
+    // essa area nao e pra essa propaganda que eu coloquei kkkkk, e so pra saber que esse vai ser o lugar que vao ter aquelas propagandas que vao trocando sabe, que tem as setinhas e a pessoa pode ir trocando e tals
+    <div class="propaganda">
+        <a href="?"><img src="imagem/dragoncity.jpg" alt="propaganda1"></a>
+    </div>
 
     <section id="loader">
         <div class="loader-content">
