--- a/marketplace.html
+++ b/marketplace.html
@@ -24,31 +24,27 @@
             </ul>
         </nav>
 
-        // barra de pesquisa, acho que ela fica boa no meio assim, so falta arrumar a largura e o desgin, mas acho que fica boa no meio assim do header
-
+        <!-- barra de pesquisa, acho que ela fica boa no meio assim, so falta arrumar a largura e o desgin, mas acho que fica boa no meio assim do header -->
         <div class="search-bar">
             <input type="text" placeholder="Pesquisar produtos...">
             <button type="submit"><i class="fas fa-search"></i></button>
           </div>
           
-        // pensei em linkar essa parte com a socializaçao, tipo pro usuario conversar diretamente com o vendedor   
-
+        <!-- pensei em linkar essa parte com a socializaçao, tipo pro usuario conversar diretamente com o vendedor -->   
           <div class="chat">
             <a href="socializacao.html">
             <button type="submit">chat</button> 
             </a>
         </div>
 
-        // essa parte ia ser tipo um carrinho, mas o nome ia ser favoritos, tipo ao inves da pessoa adicionar o produto no carrinho ia colocar nos favoritos msm
-
+        <!-- essa parte ia ser tipo um carrinho, mas o nome ia ser favoritos, tipo ao inves da pessoa adicionar o produto no carrinho ia colocar nos favoritos msm -->
         <div class="favoritos">
             <a href="carrinho.php">
             <button type="submit">Favoritos</button> 
             </a>
         </div>
 
-        // ao inves de adicionar, mudei o nome para anunciar, que fica mais legalzinho eu acho
-
+        <!-- ao inves de adicionar, mudei o nome para anunciar, que fica mais legalzinho eu acho -->
         <div class="adicionar">
             <a href="adicionar.html">
             <button type="submit">Anunciar</button>
@@ -57,10 +53,31 @@
 
     </header>
 
-    // essa area nao e pra essa propaganda que eu coloquei kkkkk, e so pra saber que esse vai ser o lugar que vao ter aquelas propagandas que vao trocando sabe, que tem as setinhas e a pessoa pode ir trocando e tals
+        <!-- essa area nao e pra essa propaganda que eu coloquei kkkkk, e so pra saber que esse vai ser o lugar que vao ter aquelas propagandas que vao trocando sabe, que tem as setinhas e a pessoa pode ir trocando e tals -->
     <div class="propaganda">
         <a href="?"><img src="imagem/dragoncity.jpg" alt="propaganda1"></a>
     </div>
+
+    <!-- essa area é pra ser que nem aquela da olx, bem em baixo da propaganda, com as imagens e o nome bem em baixo -->
+    <div class="categorias">
+        <a href="#"><img src="imagens/icone-eletronicos.png" alt="Eletrônicos"></a>
+        <a href="#"><img src="imagens/icone-moda.png" alt="Moda"></a>
+        <a href="#"><img src="imagens/icone-casa-decoracao.png" alt="Casa e decoração"></a>
+        <a href="#"><img src="imagens/icone-beleza-saude.png" alt="Beleza e saúde"></a>
+        <a href="#"><img src="imagens/icone-lazer-esportes.png" alt="Lazer e esportes"></a>
+        <a href="#"><img src="imagens/icone-lazer-esportes.png" alt="automoveis"></a>
+        <a href="#"><img src="imagens/icone-lazer-esportes.png" alt="ver todas as categorias"></a>
+    </div>
+
+    <!-- area onde vao ficar os anuncios, acho que eles separados assim iam ficar melhor, divididos por area, e dai o usuario mesmo vai vendo oque ele quer especificamente -->
+    <div class="mais-procurados"><h1>Mais procurados</h1></div>
+
+    <div class="mais-procurados"><h1>Mais procurados em Moda</h1></div>
+
+    <div class="mais-procurados"><h1>Mais procurados em automoveis</h1></div>
+
+    <div class="mais-procurados"><h1>Mais procurados Eletrônicos</h1></div>
+
 
     <section id="loader">
         <div class="loader-content">
