alterei coisinhas nos botões do topo da página.html

--- a/marketplace.html
+++ b/marketplace.html
@@ -25,6 +25,7 @@
         </nav>
 
         <!-- barra de pesquisa, acho que ela fica boa no meio assim, so falta arrumar a largura e o desgin, mas acho que fica boa no meio assim do header -->
+        
         <div class="search-bar">
             <input type="text" placeholder="Pesquisar produtos...">
             <button type="submit"><i class="fas fa-search"></i></button>
@@ -34,7 +35,7 @@
         <!-- Samuel - na hora eu achei estranho, mas faz sentido tem que ver o resto do pessoal--> 
           <div class="chat">
             <a href="socializacao.html">
-            <button type="submit">chat</button> 
+            <button type="submit">Chat</button> 
             </a>
         </div>
 
