--- a/adicionar.html
+++ b/adicionar.html
@@ -13,23 +13,20 @@
     
     <header>
         <div class="logo">
-            <a href="refugepi.html"> <img src="imagem/logo1.png" alt="Logo"> </a>
+            <a href="refugepi.html"> <img src="imagem/mini logo.png" alt="Logo"> </a>
         </div>
         <nav>
             <ul>
-                <li><a href="socializacao.html"><i class="fas fa-users"></i> Socialização</a></li>
-                <li><a href="vagasdeemprego.html"><i class="fas fa-briefcase"></i> Introdução ao Trabalho</a></li>
-                <li><a href="marketplace.html"><i class="fas fa-shopping-basket"></i> Marketplace</a></li>
+                <h1>Marketplace<i class="fas fa-shopping-basket"></i></h1>
             </ul>
         </nav>
+
+        <div class="voltar-botao">
+            <a href="marketplace.html"><button type="submit" style="font-size: 15px;"><i class="fas fa-arrow-left" style="font-size: 20px;"></i> Voltar</button></a>
+         </div>
+ 
+
     </header>
-
-    <section id="loader">
-        <div class="loader-content">
-          <img src="imagem/mundo carregamento.png" alt="Carregando...">
-        </div>
-    </section>
-
 
     <h1>Adicionar Produto</h1>
   <form>
@@ -69,6 +66,12 @@
     <input type="submit" value="Adicionar Produto">
   </form>
 
+  <section id="loader">
+    <div class="loader-content">
+      <img src="imagem/mundo marketplace.png" alt="Carregando...">
+    </div>
+</section>
+
   <footer>
     <div class="footer-links">
         <a href="ajuda.html"><i class="fas fa-question-circle"></i> Ajuda</a>
@@ -83,7 +86,7 @@
         if (document.readyState === "complete") {
             setTimeout(function() {
                 document.getElementById("loader").style.display = "none";
-            }, 1500);
+            }, 1250);
         }
     };
 </script>
