--- a/socializacao.html
+++ b/socializacao.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="socializacao.html"><i class="fas fa-users"></i> Socialização</a></li>
                 <li><a href="vagasdeemprego.html"><i class="fas fa-briefcase"></i> Introdução ao Trabalho</a></li>
-                <li><a href="marketplace.html"><i class="fas fa-shopping-basket"></i> Marketplace</a></li>
+                <li><a href="marketplace.php"><i class="fas fa-shopping-basket"></i> Marketplace</a></li>
             </ul>
         </nav>
     </header>
